# CrewAI_Constructor

./: 404.html  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: index.html
instalacao/: index.html
search/: search_index.json
src/: main.py  mkdocs.yml
src/create_crew_project/: backend.py  crew.py
src/docs/: api.md  configuracao.md  index.md  instalacao.md  uso.md
src/frontend/: app.py
src/site/: index.html
src/site/configuracao/: index.html
src/site/uso/: index.html
